# sheldon

./: setenv.sh
project/: CMakeLists.txt
project/src/: main.cpp
project/src/etl/: CMakeLists.txt  etl.cpp  etl.hpp
project/src/examples/: csv_parser.cpp  etl.cpp  sciplot.cpp
